<resources>
    <string-array name="item_types">
        <item>Book</item>
        <item>Disk</item>
        <item>Newspaper</item>
    </string-array>

    <string name="sort_by_name">По наименованию</string>
    <string name="sort_by_created_at">По дате добавления</string>
    <string-array name="sort_options">
        <item>@string/sort_by_name</item>
        <item>@string/sort_by_created_at</item>
    </string-array>

    <string name="app_name">TApplication</string>
    <string name="item_icon_content_description">Иконка элемента</string>
    <string name="item_id">ID: %d</string>
    <string name="recycler_view_description">Список элементов библиотеки</string>
    <string name="item_icon_detail_description">Иконка элемента</string>
    <string name="title">Название</string>
    <string name="enter_a_title">Введите название</string>
    <string name="id_detail_text">ID</string>
    <string name="input_id_detail">Введите ID</string>
    <string name="detail_optional_field_1">Доп. поле 1</string>
    <string name="detail_optional_field_2">Доп. поле 2</string>
    <string name="detail_hint_text">...</string>
    <string name="detail_button_save_text">Сохранить</string>
    <string name="detail_checkbox_available">есть в наличии</string>
    <string name="menu_main_title">Добавить</string>
    <string name="book_optional_attribute_label_1">Автор</string>
    <string name="book_optional_attribute_label_2">Страниц</string>
    <string name="disk_optional_attribute_label_1">Тип диска</string>
    <string name="newspaper_optional_attribute_label_1">Выпуск</string>
    <string name="newspaper_optional_attribute_label_2">Месяц</string>
    <string name="add_item">Добавление элемента</string>
    <string name="error_loading_items">Что-то пошло не так, попробуйте позже</string>
    <string name="message_item_added">Элемент добавлен</string>
    <string name="error_adding_item">Ошибка добавления элемента</string>
    <string name="message_item_status_updated">Статус элемента с id #%d изменен</string>
    <string name="error_updating_item_status">Ошибка изменения статуса элемента</string>
    <string name="message_item_removed">Элемент успешно удалён</string>
    <string name="error_removing_item">Ошибка при удалении элемента</string>
    <string name="error_applying_sorting">Ошибка при применении сортировки</string>
    <string name="error_next_page_loading">Ошибка при загрузке следующей страницы</string>
    <string name="error_previous_page_loading">Ошибка при загрузке предыдущей страницы</string>
    <string name="empty_data">Нет данных</string>
    <string name="tab_library_header">Библиотека</string>
    <string name="tab_google_books_header">Google Books</string>
    <string name="filter_author">Автор</string>
    <string name="filter_name">Название</string>
    <string name="filter_search">Поиск</string>
</resources>