<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/itemDetailIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/item_icon_detail_description"
            tools:src="@drawable/book_svg"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />
        <EditText
            android:id="@+id/itemDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/enter_a_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_detail_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />
        <EditText
            android:id="@+id/itemId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/input_id_detail"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/availableCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_checkbox_available"
            android:textColor="@android:color/black"
            android:layout_marginTop="12dp"
            android:enabled="false"/>

        <TextView
            android:id="@+id/extraLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/detail_optional_field_1"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/extraInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/detail_hint_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/extraLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/detail_optional_field_2"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/extraInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/detail_hint_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_button_save_text"
            android:layout_marginTop="24dp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
